--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
           <!-- CONTENT -->
           <div class="flex flex-col justify-center">
             <h4 class="text-gray-700 uppercase">Modern Furnitures</h4>
-            <h1 class="text-5xl font-bold my-2">Beatifully Equip Your Home</h1>
+            <h1 class="text-5xl font-bold my-2">Beautifully Equip Your Home</h1>
             <p class="text-gray-700">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas
               unde ad, in accusantium nostrum pariatur esse sequi officia
